Added my SheCodes repository on GitHub at bottom of page

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 </div>
 </div>
 </div>
+<h6> Check out my SheCodes repository on GitHub <a href="https://github.com/patcard21/SheCodes-weather-app">here</a> 👾</h6> 
 <script src= "src/app_api_hw.js"></script>
   </body>
 </html>
