Added target="_blank" to <a> element on line 102

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 </div>
 </div>
 <h6> Check out my SheCodes repository on GitHub <a href="https://github.com/patcard21/SheCodes-weather-app">here</a> 👾</h6> 
+<h6> Check out my SheCodes repository on GitHub <a target="_blank" href="https://github.com/patcard21/SheCodes-weather-app">here</a> 👾</h6> 
 <script src= "src/app_api_hw.js"></script>
   </body>
 </html>
